--- a/MyImage/index.html
+++ b/MyImage/index.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>My First AWS Fargate Service!</h1>
 
-<p>My first paragraph.</p>
+<p>With a custom container!.</p>
 
 </body>
 </html>
+
